--- a/ios/photoapplication/Info.plist
+++ b/ios/photoapplication/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+	</array>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>To view your photos</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
