--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "react-native-platform-touchable": "^1.1.1",
     "react-native-share": "^1.1.1",
     "react-native-vector-icons": "^5.0.0",
-    "react-navigation": "^2.12.1"
+    "react-navigation": "^2.12.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
