--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "firebase": "^5.5.0",
     "firebase-tools": "^4.2.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
