--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-picker": "^0.26.10",
     "react-native-platform-touchable": "^1.1.1",
+    "react-native-progress": "^3.5.0",
     "react-native-share": "^1.1.1",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.12.1",
