--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-heic-converter": "^1.1.1",
     "react-native-image-picker": "^0.26.10",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-progress": "^3.5.0",
