--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,48 @@
-.DS_STORE
-node_modules
-scripts/flow/*/.flowconfig
-*~
-*.pyc
-.grunt
-_SpecRunner.html
-__benchmarks__
-build/
-remote-repo/
-coverage/
-.module-cache
-fixtures/dom/public/react-dom.js
-fixtures/dom/public/react.js
-test/the-files-to-test.generated.js
-*.log*
-chrome-user-data
-*.sublime-project
-*.sublime-workspace
-.idea
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# expo
+.expo/
+
+# dependencies
+/node_modules
+
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+.idea/
+.DS_Store
+
+*.log
+.coverage
+ci/pipeline-secrets.yml
 *.iml
+local.properties
+android/app/build/
+android/app/release
+android/build/
+.gradle/
+gradle-home
+
+xcuserdata
+
+*.xccheckout
+*.xcuserstate
+*.xcscmblueprint
+ios/build
+ios/fastlane-logs
+ios/build-artifacts
+ios/derived-data
+ios/Pods/
+fastlane/report.xml
+
+android/gradle-home
+google-play-android-developer.json
+
+**/cucumber.json
+.env
+.env.release
 .vscode
-*.swp
-*.swo
+testConfig.js
