--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     ],
     "moduleNameMapper": {
       "^react-redux": "<rootDir>/test/stubs/react-redux-stub.js",
-      "react-native-fetch-blob": "<rootDir>/test/stubs/react-native-fetch-blob-stub.js"
+      "react-native-fetch-blob": "<rootDir>/test/stubs/react-native-fetch-blob-stub.js",
+      "firebase": "<rootDir>/test/stubs/firebase-stub.js"
     }
   },
   "dependencies": {
