--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-fetch-blob": "^0.10.8",
     "react-native-heic-converter": "^1.1.1",
     "react-native-image-picker": "^0.26.10",
+    "react-native-navigation": "2.0.2373",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-progress": "^3.5.0",
     "react-native-share": "^1.1.1",
