--- a/package.json
+++ b/package.json
@@ -46,11 +46,14 @@
     "react-native": "~0.55.2",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-heic-converter": "^1.1.1",
+    "react-native-image-gallery": "^2.1.5",
     "react-native-image-picker": "^0.26.10",
+    "react-native-interactive-image-gallery": "^0.1.2",
     "react-native-navigation": "2.0.2373",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-progress": "^3.5.0",
     "react-native-share": "^1.1.1",
+    "react-native-thumbnail-grid": "^0.3.0",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.12.1",
     "react-redux": "^5.0.7",
