--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "moduleNameMapper": {
       "^react-redux": "<rootDir>/test/stubs/react-redux-stub.js",
       "react-native-fetch-blob": "<rootDir>/test/stubs/react-native-fetch-blob-stub.js",
-      "^firebase": "<rootDir>/test/stubs/firebase-stub.js"
+      "^firebase": "<rootDir>/test/stubs/firebase-stub.js",
+      ".+\\.(png)$": "jest-transform-stub"
     }
   },
   "dependencies": {
     "firebase": "^5.5.0",
     "firebase-tools": "^4.2.1",
+    "jest-transform-stub": "^1.0.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-fetch-blob": "^0.10.8",
