--- a/ios/photoapplication/Info.plist
+++ b/ios/photoapplication/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -36,15 +36,15 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>To view your photos</string>
+	<string>View your photos and choose which ones to upload</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>To view your photos</string>
+	<string>View your photos and choose which ones to upload</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>To view your photos</string>
+	<string>View your photos and choose which ones to upload</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>To view your photos</string>
+	<string>View your photos and choose which ones to upload</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Feather.ttf</string>
