--- a/ios/photoapplication/Info.plist
+++ b/ios/photoapplication/Info.plist
@@ -38,7 +38,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>View your photos and choose which ones to upload</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>View your photos and choose which ones to upload</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
