--- a/package.json
+++ b/package.json
@@ -43,8 +43,18 @@
       ".+\\.(png)$": "jest-transform-stub"
     }
   },
+  "detox": {
+    "configurations": {
+      "ios.sim.debug": {
+        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/photo-application.app",
+        "build": "xcodebuild -project ios/photo-application.xcodeproj -scheme photo-application -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+        "type": "ios.simulator",
+        "name": "iPhone X"
+      }
+    }
+  },
   "dependencies": {
-    "firebase": "^5.5.0",
+    "firebase": "4.6.2",
     "firebase-tools": "^4.2.1",
     "jest-transform-stub": "^1.0.0",
     "react": "16.3.1",
@@ -66,6 +76,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "detox": "^9.0.6",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "chance": "^1.0.16",
     "eslint": "4.19.1",
@@ -73,5 +84,8 @@
     "jest": "^23.5.0",
     "jest-react-native": "^18.0.0",
     "react-test-renderer": "16.3.1"
+  },
+  "resolutions": {
+    "grpc": "^1.12.0"
   }
 }
