--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "react-native-navigation": "2.0.2373",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-progress": "^3.5.0",
-    "react-native-share": "^1.1.1",
+    "react-native-share": "1.1.3",
     "react-native-thumbnail-grid": "^0.3.0",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.12.1",
