--- a/package.json
+++ b/package.json
@@ -75,12 +75,13 @@
     "react-navigation": "^2.12.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "detox": "^9.0.6",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "chance": "^1.0.16",
+    "detox": "^9.0.6",
     "eslint": "4.19.1",
     "eslint-config-get-off-my-lawn": "^4.0.1",
     "jest": "^23.5.0",
