--- a/package.json
+++ b/package.json
@@ -56,11 +56,12 @@
     "test-runner": "jest"
   },
   "dependencies": {
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "firebase": "4.6.2",
     "firebase-tools": "^4.2.1",
     "jest-transform-stub": "^1.0.0",
     "react": "16.3.1",
-    "react-native": "0.55.4",
+    "react-native": "0.56",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-heic-converter": "^1.1.1",
     "react-native-image-gallery": "^2.1.5",
@@ -79,7 +80,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "babel-preset-react-native-stage-0": "^1.0.1",
+    "babel-preset-react-native": "5.0.0",
     "chance": "^1.0.16",
     "detox": "^9.0.6",
     "eslint": "4.19.1",
