--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "cucumber": "^5.0.2",
     "firebase": "4.6.2",
     "firebase-tools": "^4.2.1",
     "jest-transform-stub": "^1.0.0",
