--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,6 +154,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-mail')
     compile project(':react-native-vector-icons')
     compile project(':react-native-share')
     compile project(':react-native-image-picker')
