--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-native-image-gallery": "^2.1.5",
     "react-native-image-picker": "^0.26.10",
     "react-native-interactive-image-gallery": "^0.1.2",
+    "react-native-mail": "^3.0.7",
     "react-native-navigation": "2.0.2373",
     "react-native-platform-touchable": "^1.1.1",
     "react-native-progress": "^3.5.0",
